--- a/OnSale.Web/Views/Countries/Create.cshtml
+++ b/OnSale.Web/Views/Countries/Create.cshtml
@@ -12,11 +12,7 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
+            <partial name="_Country" />
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-sm btn-primary" />
                 <a asp-action="Index" class="btn btn-sm btn-success">Back to List</a>
