--- a/OnSale.Web/Views/Countries/Edit.cshtml
+++ b/OnSale.Web/Views/Countries/Edit.cshtml
@@ -13,11 +13,7 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
+            <partial name="_Country" />
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-sm btn-primary" />
                 <a asp-action="Index" class="btn btn-sm btn-success">Back to List</a>
