--- a/OnSale.Web/Views/Countries/Index.cshtml
+++ b/OnSale.Web/Views/Countries/Index.cshtml
@@ -28,6 +28,9 @@
                             <th>
                                 @Html.DisplayNameFor(model => model.Name)
                             </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.DepartmentsNumber)
+                            </th>
                             <th></th>
                         </tr>
                     </thead>
@@ -37,6 +40,9 @@
                             <tr>
                                 <td>
                                     @Html.DisplayFor(modelItem => item.Name)
+                                </td>                                
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.DepartmentsNumber)
                                 </td>
                                 <td>
                                     <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-warning">Edit<!--<i class="glyphicon glyphicon-pencil"></i>--></a>
