--- a/OnSale.Web/Views/Countries/DetailsDepartment.cshtml
+++ b/OnSale.Web/Views/Countries/DetailsDepartment.cshtml
@@ -1,64 +1,63 @@
-﻿@model OnSale.Common.Entities.Country
+﻿@model OnSale.Common.Entities.Department
 
 @{
     ViewData["Title"] = "Details";
 }
+
 <link rel="stylesheet" href="https://cdn.datatables.net/1.10.21/css/dataTables.bootstrap.min.css" />
 <h2>Details</h2>
 
 <div>
-    <h4>Country</h4>
+    <h4>Department</h4>
     <hr />
-    <dl class="row">
-        <dt class="col-sm-1">
-            @Html.DisplayNameFor(model => model.Name):
+    <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.Name)
         </dt>
-        <dd class="col-sm-11">
+        <dd>
             @Html.DisplayFor(model => model.Name)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.CitiesNumber)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.CitiesNumber)
+        </dd>
     </dl>
-    <div>
-        <a asp-action="AddDepartment" asp-route-id="@Model.Id" class="btn btn-sm btn-primary"><i class="glyphicon glyphicon-plus"></i> Department</a>
-        <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-sm btn-warning">Edit</a>
-        <a asp-action="Index" class="btn btn-sm btn-success">Back to List</a>
-    </div>
-
-    <hr />
 </div>
+<div>
+    <a asp-action="AddCity" asp-route-id="@Model.Id" class="btn btn-primary"><i class="glyphicon glyphicon-plus"></i> City</a>
+    <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning">Edit</a>
+    <a asp-action="Details" asp-route-id="@Model.IdCountry" class="btn btn-success">Back to List</a>
+</div>
+<br />
 
 <div class="row">
     <div class="col-md-12">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <h3 class="panel-title">Departments</h3>
+                <h3 class="panel-title">Cities</h3>
             </div>
             <div class="panel-body">
                 <table class="table table-hover table-responsive table-striped" id="MyTable">
                     <thead>
                         <tr>
                             <th>
-                                @Html.DisplayNameFor(model => model.Departments.FirstOrDefault().Name)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.Departments.FirstOrDefault().CitiesNumber)
+                                @Html.DisplayNameFor(model => model.Cities.FirstOrDefault().Name)
                             </th>
                             <th></th>
                         </tr>
                     </thead>
                     <tbody>
-                        @foreach (var item in Model.Departments)
+                        @foreach (var item in Model.Cities)
                         {
                             <tr>
                                 <td>
                                     @Html.DisplayFor(modelItem => item.Name)
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.CitiesNumber)
-                                </td>
-                                <td>
-                                    <a asp-action="EditDepartment" asp-route-id="@item.Id" class="btn btn-sm btn-warning"><i class="glyphicon glyphicon-pencil"></i></a>
-                                    <a asp-action="DetailsDepartment" asp-route-id="@item.Id" class="btn btn-sm btn-info"><i class="glyphicon glyphicon-align-justify"></i></a>
-                                    <button data-id="@item.Id" class="btn btn-sm btn-danger deleteItem" data-toggle="modal" data-target="#deleteDialog"><i class="glyphicon glyphicon-trash"></i></button>
+                                    <a asp-action="EditCity" asp-route-id="@item.Id" class="btn btn-warning"><i class="glyphicon glyphicon-pencil"></i></a>
+                                    <button data-id="@item.Id" class="btn btn-danger deleteItem" data-toggle="modal" data-target="#deleteDialog"><i class="glyphicon glyphicon-trash"></i></button>
                                 </td>
                             </tr>
                         }
@@ -83,7 +82,8 @@
             $('#MyTable').DataTable();
 
             // Delete item
-            sc_deleteDialog.openModal('deleteItem', true, 'btnYesDelete', '/Countries/DeleteDepartment/', false);
+            sc_deleteDialog.openModal('deleteItem', true, 'btnYesDelete', '/Countries/DeleteCity/', false);
         });
     </script>
 }
+
