--- a/OnSale.Web/Views/Countries/Index.cshtml
+++ b/OnSale.Web/Views/Countries/Index.cshtml
@@ -65,6 +65,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.21/js/dataTables.bootstrap.min.js"></script>
+    <script src="/js/deleteDialog.js"></script>
 
     <script type="text/javascript">
         $(document).ready(function () {
