--- a/OnSale.Web/Views/Countries/DetailsDepartment.cshtml
+++ b/OnSale.Web/Views/Countries/DetailsDepartment.cshtml
@@ -27,7 +27,7 @@
 </div>
 <div>
     <a asp-action="AddCity" asp-route-id="@Model.Id" class="btn btn-primary"><i class="glyphicon glyphicon-plus"></i> City</a>
-    <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning">Edit</a>
+    <a asp-action="EditDepartment" asp-route-id="@Model.Id" class="btn btn-warning">Edit</a>
     <a asp-action="Details" asp-route-id="@Model.IdCountry" class="btn btn-success">Back to List</a>
 </div>
 <br />
