--- a/OnSale.Web/Views/Categories/Index.cshtml
+++ b/OnSale.Web/Views/Categories/Index.cshtml
@@ -1,14 +1,10 @@
-﻿@model IEnumerable<OnSale.Common.Entities.Country>
+﻿@model IEnumerable<OnSale.Common.Entities.Category>
 
 @{
     ViewData["Title"] = "Index";
 }
 
-
-
-<!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />-->
 <link rel="stylesheet" href="https://cdn.datatables.net/1.10.21/css/dataTables.bootstrap.min.css" />
-
 <br />
 
 <p>
@@ -19,7 +15,7 @@
     <div class="col-md-12">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <h3 class="panel-title">Countries</h3>
+                <h3 class="panel-title">Categories</h3>
             </div>
             <div class="panel-body">
                 <table class="table table-hover table-responsive table-striped" id="MyTable">
@@ -29,7 +25,7 @@
                                 @Html.DisplayNameFor(model => model.Name)
                             </th>
                             <th>
-                                @Html.DisplayNameFor(model => model.DepartmentsNumber)
+                                @Html.DisplayNameFor(model => model.ImageFullPath)
                             </th>
                             <th></th>
                         </tr>
@@ -40,14 +36,13 @@
                             <tr>
                                 <td>
                                     @Html.DisplayFor(modelItem => item.Name)
-                                </td>                                
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.DepartmentsNumber)
                                 </td>
                                 <td>
-                                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-warning"><i class="glyphicon glyphicon-pencil"></i> Edit</a>
-                                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-sm btn-info"><i class="glyphicon glyphicon-menu-hamburger"></i> Details</a>
-                                    <button data-id="@item.Id" class="btn btn-sm btn-danger deleteItem" data-toggle="modal" data-target="#deleteDialog"><i class="glyphicon glyphicon-trash"></i> Delete</button>
+                                    <img src="@item.ImageFullPath" style="width:100px;height:100px;max-width: 100%; height: auto;" />
+                                </td>
+                                <td>
+                                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-warning"><i class="glyphicon glyphicon-pencil"></i></a>
+                                    <button data-id="@item.Id" class="btn btn-sm btn-danger deleteItem" data-toggle="modal" data-target="#deleteDialog"><i class="glyphicon glyphicon-trash"></i></button>
                                 </td>
                             </tr>
                         }
@@ -72,7 +67,7 @@
             $('#MyTable').DataTable();
 
             // Delete item
-            sc_deleteDialog.openModal('deleteItem', true, 'btnYesDelete', '/Countries/Delete/', false);
+            sc_deleteDialog.openModal('deleteItem', true, 'btnYesDelete', '/Categories/Delete/', false);
         });
     </script>
 }
