--- a/OnSale.Web/Views/Countries/EditCity.cshtml
+++ b/OnSale.Web/Views/Countries/EditCity.cshtml
@@ -18,8 +18,8 @@
             <partial name="_City" />
 
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-                <a asp-action="DetailsDepartment" asp-route-id="@Model.IdDepartment" class="btn btn-success">Back to List</a>
+                <input type="submit" value="Save" class="btn btn-sm btn-primary" />
+                <a asp-action="DetailsDepartment" asp-route-id="@Model.IdDepartment" class="btn btn-sm btn-success">Back to List</a>
             </div>
         </form>
     </div>
