--- a/OnSale.Web/Views/Categories/Index.cshtml
+++ b/OnSale.Web/Views/Categories/Index.cshtml
@@ -41,8 +41,8 @@
                                     <img src="@item.ImageFullPath" style="width:100px;height:100px;max-width: 100%; height: auto;" />
                                 </td>
                                 <td>
-                                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-warning"><i class="glyphicon glyphicon-pencil"></i></a>
-                                    <button data-id="@item.Id" class="btn btn-sm btn-danger deleteItem" data-toggle="modal" data-target="#deleteDialog"><i class="glyphicon glyphicon-trash"></i></button>
+                                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-warning"><i class="glyphicon glyphicon-pencil"></i> Edit</a>
+                                    <button data-id="@item.Id" class="btn btn-sm btn-danger deleteItem" data-toggle="modal" data-target="#deleteDialog"><i class="glyphicon glyphicon-trash"></i> Delete</button>
                                 </td>
                             </tr>
                         }
