--- a/OnSale.Web/Views/Countries/DetailsDepartment.cshtml
+++ b/OnSale.Web/Views/Countries/DetailsDepartment.cshtml
@@ -8,7 +8,7 @@
 <h2>Details</h2>
 
 <div>
-    <h4>Department</h4>
+    <h4>Province</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
