--- a/OnSale.Web/Views/Shared/_Layout.cshtml
+++ b/OnSale.Web/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - OnSale.Web</title>
+    <title>@ViewData["Title"] - OnSale</title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -35,6 +35,7 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                     <li><a asp-area="" asp-controller="Countries" asp-action="Index">Countries</a></li>
                     <li><a asp-area="" asp-controller="Categories" asp-action="Index">Categories</a></li>
+                    <li><a asp-area="" asp-controller="Products" asp-action="Index">Products</a></li>
                 </ul>
             </div>
         </div>
@@ -46,7 +47,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2020 - OnSale.Web</p>
+            <p>&copy; 2020 - OnSale</p>
         </footer>
     </div>
 
