UI fixes, buttons, links, etc

--- a/OnSale.Web/Views/Countries/DetailsDepartment.cshtml
+++ b/OnSale.Web/Views/Countries/DetailsDepartment.cshtml
@@ -28,7 +28,7 @@
 <div>
     <a asp-action="AddCity" asp-route-id="@Model.Id" class="btn btn-sm btn-primary"><i class="glyphicon glyphicon-plus"></i> City</a>
     <a asp-action="EditDepartment" asp-route-id="@Model.Id" class="btn btn-sm btn-warning"><i class="glyphicon glyphicon-pencil"></i> Edit</a>
-    <a asp-action="Details" asp-route-id="@Model.IdCountry" class="btn btn-sm btn-success">Back to List</a>
+    <a asp-action="Details" asp-route-id="@Model.IdCountry" class="btn btn-sm btn-success"><i class="glyphicon glyphicon-remove"></i> Cancel</a>
 </div>
 <br />
 
