--- a/OnSale.Web/Views/Products/Details.cshtml
+++ b/OnSale.Web/Views/Products/Details.cshtml
@@ -86,7 +86,7 @@
                                     <img src="@item.ImageFullPath" style="width:200px;height:200px;max-width: 100%; height: auto;" />
                                 </td>
                                 <td>
-                                    <button data-id="@item.Id" class="btn btn-sm btn-danger deleteItem" data-toggle="modal" data-target="#deleteDialog"><i class="glyphicon glyphicon-trash"></i></button>
+                                    <button data-id="@item.Id" class="btn btn-sm btn-danger deleteItem" data-toggle="modal" data-target="#deleteDialog"><i class="glyphicon glyphicon-trash"></i> Delete</button>
                                 </td>
                             </tr>
                         }
