--- a/OnSale.Web/Views/Shared/_DeleteDialog.cshtml
+++ b/OnSale.Web/Views/Shared/_DeleteDialog.cshtml
@@ -2,14 +2,14 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Delete Record</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Warning!</h5>
             </div>
             <div class="modal-body">
-                <p>Are you sure you want delete this record?</p>
+                <p>Are you sure? This action will permanently remove this record.</p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-primary" data-dismiss="modal">No</button>
-                <button type="button" class="btn btn-danger" id="btnYesDelete">Yes</button>
+                <button type="button" class="btn btn-sm btn-danger" id="btnYesDelete"><i class="glyphicon glyphicon-trash"></i> Delete</button>
+                <button type="button" class="btn btn-sm btn-success" data-dismiss="modal"><i class="glyphicon glyphicon-remove"></i> Cancel</button>
             </div>
         </div>
     </div>
