--- a/OnSale.Web/Views/Countries/Create.cshtml
+++ b/OnSale.Web/Views/Countries/Create.cshtml
@@ -14,8 +14,8 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <partial name="_Country" />
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-sm btn-primary" />
-                <a asp-action="Index" class="btn btn-sm btn-success">Back to List</a>
+                <button type="submit" class="btn btn-sm btn-primary"><span><i class="glyphicon glyphicon-ok"></i></span> Save</button>
+                <a asp-action="Index" class="btn btn-sm btn-success"><i class="glyphicon glyphicon-remove"></i> Cancel</a>
             </div>
         </form>
     </div>
