--- a/OnSale.Web/Views/Countries/Details.cshtml
+++ b/OnSale.Web/Views/Countries/Details.cshtml
@@ -26,7 +26,7 @@
     <div>
         <a asp-action="AddDepartment" asp-route-id="@Model.Id" class="btn btn-sm btn-primary"><i class="glyphicon glyphicon-plus"></i> Department</a>
         <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-sm btn-warning"><i class="glyphicon glyphicon-pencil"></i> Edit</a>
-        <a asp-action="Index" class="btn btn-sm btn-success">Back to List</a>
+        <a asp-action="Index" class="btn btn-sm btn-success"><i class="glyphicon glyphicon-remove"></i> Cancel</a>
     </div>
 
     <hr />
