--- a/OnSale.Web/Views/Products/Edit.cshtml
+++ b/OnSale.Web/Views/Products/Edit.cshtml
@@ -17,7 +17,7 @@
             <partial name="_Product" />
 
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-sm btn-primary" />
+                <button type="submit" class="btn btn-sm btn-primary"><span><i class="glyphicon glyphicon-ok"></i></span> Save</button>
                 <a asp-action="Index" class="btn btn-sm btn-success">Back to List</a>
             </div>
         </form>
