--- a/OnSale.Web/Views/Products/Index.cshtml
+++ b/OnSale.Web/Views/Products/Index.cshtml
@@ -73,7 +73,7 @@
                                 <td>
                                     <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-warning"><i class="glyphicon glyphicon-pencil"></i> Edit</a>
                                     <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-sm btn-info"><i class="glyphicon glyphicon-menu-hamburger"></i> Details</a>
-                                    <button data-id="@item.Id" class="btn btn-sm btn-danger deleteItem" data-toggle="modal" data-target="#deleteDialog"><i class="glyphicon glyphicon-trash"></i></button>
+                                    <button data-id="@item.Id" class="btn btn-sm btn-danger deleteItem" data-toggle="modal" data-target="#deleteDialog"><i class="glyphicon glyphicon-trash"></i> Delete</button>
                                 </td>
                             </tr>
                         }
