Implemented Edit User Action

--- a/OnSale.Web/Views/Account/NotAuthorized.cshtml
+++ b/OnSale.Web/Views/Account/NotAuthorized.cshtml
@@ -4,6 +4,6 @@
 
 <br />
 <br />
-<img src="~/images/gopher_head-min.png" />
-<h2>You are not authorized to perform this action!</h2>
-
+<div class="container body-content">
+    <div class="alert alert-info" role="alert">Sorry, you are not authorized to perform this action. <a asp-controller="Home" asp-action="Index" class="alert-link">Return to Home</a></p></div>
+</div>
