--- a/OnSale.Web/Views/Home/Error404.cshtml
+++ b/OnSale.Web/Views/Home/Error404.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
     ViewData["Title"] = "Error404";
 }
-<h1>Sorry, page not found</h1>
 <br />
 <br />
-<img src="~/images/gopher_head-min.png" />
-<h2>Click <a asp-area="" asp-controller="Home" asp-action="Index">here</a> to go back to homepage.</h2>
+<div class="container">
+    <div class="alert alert-info" role="alert">Page not found. <a asp-controller="Home" asp-action="Index" class="alert-link"> Return to Home</a></p></div>
+</div>
